--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -23,6 +23,9 @@ jobs:
           # extended: true
 
       - name: Build
+        run: npm install
+
+      - name: Build
         run: hugo --minify
 
       - name: Deploy
