chore: adds build to the CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,12 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        go-version: [1.19.x]
-        os: [ubuntu-latest]
-        xcaddy-version: [v0.3.2]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.19.x
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -34,3 +29,22 @@ jobs:
 
       - name: Tests and coverage
         run: go run mage.go test
+
+      - name: Tests and coverage
+        run: go run mage.go generate
+
+      - name: Verifies differences
+        run: git diff --exit-code
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
+          # extended: true
+
+      - name: Build
+        run: npm install
+
+      - name: Build
+        run: hugo --minify
