chore: renames steps in job.

--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -19,9 +19,8 @@ jobs:
         with:
           hugo-version: 'latest'
           extended: true
-          # extended: true
 
-      - name: Build
+      - name: Install deps
         run: npm install
 
       - name: Build
