--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:best-practices"
-  ],
-  "constraints": {
-    "go": "1.21"
-  }
+    "local>corazawaf/renovate-config",
+    "schedule:weekly"
+  ]
 }
