--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,11 @@ on:
       - "main"
     paths-ignore:
       - "LICENSE"
+      - "README.md"
   pull_request:
     paths-ignore:
       - "LICENSE"
+      - "README.md"
 
 jobs:
   test:
