--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,7 +32,7 @@ jobs:
           echo "short=$(gh api repos/corazawaf/coraza/commits/main -q .sha | cut -c 1-8)" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
+
       - name: Pull latest coraza
         run: |
           go get -u github.com/corazawaf/coraza/v3@${{ steps.coraza-latest-commit.outputs.long }}
@@ -44,14 +44,14 @@ jobs:
       - name: Generate content
         run: go run mage.go generate
 
-      - name: Verify Changed files
-        uses: tj-actions/verify-changed-files@6ed7632824d235029086612d4330d659005af687 # v20
-        id: verify-changed-files
-        with:
-          files: |
-             content/docs/*
-             go.mod
-             go.sum
+      #- name: Verify Changed files
+      #  uses: tj-actions/verify-changed-files@6ed7632824d235029086612d4330d659005af687 # v20
+      #  id: verify-changed-files
+      #  with:
+      #    files: |
+      #       content/docs/*
+      #       go.mod
+      #       go.sum
 
       - name: List changed files
         if: ${{ github.event_name == 'pull_request' }}
