--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "scripts": {
     "init": "shx rm -rf .git && git init -b main",
-    "create": "exec-bin bin/hugo/hugo new",
+    "create": "hugo new",
     "prestart": "npm run clean",
-    "start": "exec-bin bin/hugo/hugo server --bind=0.0.0.0 --disableFastRender",
+    "start": "hugo server --bind=0.0.0.0 --disableFastRender",
     "prebuild": "npm run clean",
-    "build": "exec-bin bin/hugo/hugo --gc --minify",
+    "build": "hugo --gc --minify",
     "build:preview": "npm run build -D -F",
     "clean": "shx rm -rf public resources",
     "clean:install": "shx rm -rf package-lock.json bin node_modules ",
@@ -24,13 +24,12 @@
     "lint:scripts": "eslint assets/js config functions",
     "lint:styles": "stylelint \"assets/scss/**/*.{css,sass,scss,sss,less}\"",
     "lint:markdown": "markdownlint \"*.md\" \"content/**/*.md\"",
-    "server": "exec-bin bin/hugo/hugo server",
+    "server": "hugo server",
     "test": "npm run -s lint",
     "env": "env",
     "precheck": "npm version",
-    "check": "exec-bin bin/hugo/hugo version",
+    "check": "hugo version",
     "copy:katex-fonts": "shx cp ./node_modules/katex/dist/fonts/* ./static/fonts/",
-    "postinstall": "hugo-installer --version otherDependencies.hugo --extended",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "devDependencies": {
@@ -44,8 +43,8 @@
     "clipboard": "2.0.11",
     "eslint": "9.39.2",
     "exec-bin": "1.0.0",
-    "hugo-installer": "4.0.1",
-    "flexsearch": "0.8.212",
+    "hugo-bin": "^0.149.2",
+    "flexsearch": "0.8.147",
     "highlight.js": "11.11.1",
     "instant.page": "5.2.0",
     "katex": "0.16.27",
@@ -59,7 +58,7 @@
     "stylelint": "16.26.1",
     "stylelint-config-standard": "39.0.1"
   },
-  "otherDependencies": {
-    "hugo": "0.87.0"
+  "hugo-bin": {
+    "buildTags": "extended"
   }
 }
