--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
     "autoprefixer": "10.4.23",
     "bootstrap": "5.3.8",
     "clipboard": "2.0.11",
-    "eslint": "9.39.2",
+    "eslint": "^9.39.2",
     "exec-bin": "1.0.0",
-    "hugo-bin": "^0.149.2",
     "flexsearch": "0.8.147",
     "highlight.js": "11.11.1",
+    "hugo-bin": "^0.149.2",
     "instant.page": "5.2.0",
     "katex": "0.16.27",
     "lazysizes": "5.3.2",
-    "markdownlint-cli": "0.47.0",
-    "mermaid": "11.12.2",
-    "postcss": "8.5.6",
+    "markdownlint-cli": "^0.47.0",
+    "mermaid": "11.10.0",
+    "postcss": "8.5.3",
     "postcss-cli": "11.0.1",
     "purgecss-whitelister": "2.4.0",
     "shx": "0.4.0",
